--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.18.12",
     "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-typography": "^2.3.20",
+    "gatsby-source-drupal": "^3.3.24",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
     "react": "^16.12.0",
