--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@emotion/core": "^10.0.27",
     "gatsby": "^2.18.12",
     "gatsby-plugin-emotion": "^4.1.18",
+    "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-typography": "^2.3.20",
     "gatsby-source-drupal": "^3.3.24",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "styled-components": "^5.0.1",
     "typography": "^0.16.19",
